add sidebar effects

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Outfit", sans-serif;
+  transition: all 0.5 ease;
 }
 
 #root{
