add context and config

--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,14 @@
 #root{
   min-height: 100vh;
   display: flex;
+  animation: fadeIn 1.5s ;
 }
 
-body{
-  transition: all 0.5 ease;
+@keyframes fadeIn {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
 }
