--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,20 @@
   font-family: "Outfit", sans-serif;
 }
 
+:root {
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
+  }
+}
+
 #root{
   min-height: 100vh;
   display: flex;
